--- a/Classes/ios/PulldownUtils/Views/TLBPulldownDatetimeViewController_iPhone.xib
+++ b/Classes/ios/PulldownUtils/Views/TLBPulldownDatetimeViewController_iPhone.xib
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TLBPulldownDatetimeViewController">
             <connections>
+                <outlet property="closeButton" destination="6" id="aNB-2u-qgY"/>
                 <outlet property="datePicker" destination="9" id="zQL-aj-rg4"/>
                 <outlet property="toolbar" destination="4" id="E8u-B4-lFu"/>
                 <outlet property="view" destination="3" id="wku-I3-qmu"/>
