--- a/Classes/ios/PulldownUtils/Views/TLBPulldownDatetimeViewController_iPhone5.xib
+++ b/Classes/ios/PulldownUtils/Views/TLBPulldownDatetimeViewController_iPhone5.xib
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TLBPulldownDatetimeViewController">
             <connections>
+                <outlet property="closeButton" destination="4" id="bXa-hX-0UN"/>
                 <outlet property="datePicker" destination="9" id="hxK-NQ-hAe"/>
                 <outlet property="toolbar" destination="6" id="zsV-xA-VTn"/>
                 <outlet property="view" destination="3" id="zzC-aJ-Djj"/>
