--- a/Classes/ios/PulldownUtils/Views/TLBPulldownViewController_iPhone.xib
+++ b/Classes/ios/PulldownUtils/Views/TLBPulldownViewController_iPhone.xib
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TLBPulldownViewController">
             <connections>
+                <outlet property="closeButton" destination="10" id="XnO-4g-Vrj"/>
                 <outlet property="picker" destination="5" id="hPF-Gu-gFg"/>
                 <outlet property="toolbar" destination="23" id="4MR-9Q-4J3"/>
                 <outlet property="view" destination="4" id="7eZ-2v-fEG"/>
